# kPlantsDB

./: .gitignore  CMakeLists.txt
examples/: AllOrders.cpp  CMakeLists.txt  QueryExample.cpp
kPlantsDB/: CMakeLists.txt  DatabaseConnection.cpp  DatabaseConnection.h  Order.cpp  Order.h  Plantae.cpp  Plantae.h  QueryResult.cpp  QueryResult.h
